<resources>
    <string name="app_name">Spending Friend</string>
    <string name="accounts">Accounts</string>
    <string name="transactions">Transactions</string>
    <string name="budget">Budget</string>
    <string name="summary">Summary</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_number">Account Number</string>
    <string name="account_balance">Account Balance</string>
    <string name="dollar_symbol">$</string>
    <string name="checking">Checking</string>
    <string name="account_name">Account Name</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="cash">Cash</string>
    <string name="account">Account</string>
    <string name="transaction_name">Transaction Name</string>
    <string name="new_account">New Account</string>
    <string name="new_transaction">New Transaction</string>
    <string name="monthly_spending_cap">Monthly Spending Cap</string>
    <string name="monthly_income_goal">Monthly Income Goal</string>
    <string name="total_savings_goal">Total Savings Goal</string>
    <string name="budget_name">Budget Name</string>
    <string name="summary_header">Summary Header</string>
    <string name="account_summaries">Account Summaries</string>
    <string name="spent">Spent</string>
    <string name="earned">Earned</string>
    <string name="your_monthly_cap">Your Monthly Spending Cap</string>
    <string name="your_monthly_income_goal">Your Monthly Income Goal</string>
    <string name="savings">Savings</string>
    <string name="your_total_savings_goal">Your Total Savings Goal</string>
    <string name="delete_error_message_part_1">Uh oh! It looks like you have transactions under this account</string>
    <string name="delete_error_message_part_2">and therefore cannot be deleted.</string>
    <string name="invalid_name_error_message_part_1">Whoops! Your account name already exists or it is invalid.</string>
    <string name="invalid_name_error_message_part_2">Please try a new name.</string>
    <string name="future_date_error_part_1">Yikes, you can see into the future!</string>
    <string name="future_date_error_part_2">Your transaction date is later than today. Please keep us in the present</string>
    <string name="future_date_error_part_3">and type a new one.</string>
    <string name="account_name_error">Uh oh! The account you typed does not exist.</string>
    <string name="transcation_name_error">Looks like you forgot to name you transaction!</string>
    <string name="wrong_year_error">Your date is not from this year.</string>
    <string name="over_budget_message_part_1">Uh oh, you are currently $</string>
    <string name="over_budget_message_part_2">over budget.</string>
    <string name="under_budget_message_part_1">You are currently $</string>
    <string name="under_budget_message_part_2">under budget. Keep it up!</string>
    <string name="on_budget_message">Talk about being exact, you are right on your budget. Good job!</string>
    <string name="earned_more_message_part_1">Look at you, you\'ve earned $</string>
    <string name="earned_more_message_part_2">more than your goal!</string>
    <string name="earned_less_message_part_1">Oh no, you are $</string>
    <string name="earned_less_message_part_2">behind your income goal</string>
    <string name="earned_exact_message">Well fancy that, you earned exactly what you wanted to!</string>
    <string name="more_savings_message_part_1">How cool is that, you have saved $</string>
    <string name="more_savings_message_part_2">more than you planned.</string>
    <string name="less_savings_message_part_1">Sadly, you\'re $</string>
    <string name="less_savings_message_part_2">behind your savings goals this month.</string>
    <string name="exact_savings_message">A penny saved is a penny earned and you have saved the exact amount that you wanted!</string>
    <string name="total_combined_budget_header">Total Budget for  Combined Accounts</string>
    <string name="budget_for">Budget for</string>
</resources>
