<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.chapman.cpsc356.spendingfriend.activities.MainActivity">

   <Button
       android:id="@+id/btn_accounts"
       android:text="@string/accounts"
       android:layout_gravity="center"
       android:layout_marginEnd="60dp"
       android:layout_marginBottom="60dp"
       android:layout_width="100dp"
       android:layout_height="100dp" />

    <Button
        android:id="@+id/btn_transactions"
        android:text="@string/transactions"
        android:layout_gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="60dp"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/btn_budget"
        android:text="@string/budget"
        android:layout_gravity="center"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="60dp"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/btn_summary"
        android:text="@string/summary"
        android:layout_gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_width="100dp"
        android:layout_height="100dp" />

</FrameLayout>
