<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context="edu.chapman.cpsc356.spendingfriend.fragments.SummaryFragment">

    <TextView
        android:id="@+id/tv_summary_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        tools:text="@string/summary_header" />

    <LinearLayout
        android:id="@+id/ll_monthly_spent_summary"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_summary_header"
        android:layout_width="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_monthly_spent_header"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/spent"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_monthly_spent"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_monthly_spending_cap_summary"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ll_monthly_spent_summary"
        android:layout_width="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_monthly_spending_cap_header"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/your_monthly_cap"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_monthly_cap"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_spending_difference"
        android:gravity="center"
        android:layout_below="@id/ll_monthly_spending_cap_summary"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="60dp"
        android:textSize="15sp" />


    <LinearLayout
        android:id="@+id/ll_monthly_income_summary"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:layout_below="@id/tv_spending_difference"
        android:layout_width="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_monthly_income_header"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/earned"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_income_earned"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_monthly_income_goal_summary"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:layout_below="@id/ll_monthly_income_summary"
        android:layout_width="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_monthly_income_goal_header"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/your_monthly_income_goal"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_monthly_income_goal_summary"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_income_difference"
        android:gravity="center"
        android:layout_below="@id/ll_monthly_income_goal_summary"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/ll_monthly_savings_summary"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:layout_below="@id/tv_income_difference"
        android:layout_width="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_savings_header"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/savings"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_savings"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_monthly_savings_goal_summary"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:layout_below="@id/ll_monthly_savings_summary"
        android:layout_width="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_monthly_savings_goal_header"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/your_total_savings_goal"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_monthly_savings_goal_summary"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_total_difference"
        android:gravity="center"
        android:layout_below="@id/ll_monthly_savings_goal_summary"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:textSize="15sp" />

</RelativeLayout>
